# animescale

./: .gitignore  PKGBUILD  README.md  monitor.py  monitor.sh  pyproject.toml  upscale.py  upscale.sh
animescale/: __init__.py  cli.py  colors.py  config.py  detect.py  encode.py  jellyfin.py  monitor.py  pipeline.py
